--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,7 +1,8 @@
 {% extends 'Login/login.html.twig' %}
 
 {% block content %}
-    <div class="text-secondary font-secondary drop-shadow-lg max-w-[480px] mx-auto bg-500 w-11/12 p-4">
+<h1 class="title_section">Réinitialiser le mot de passe</h1>
+    <div class="text-secondary max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 p-3 flex flex-col gap-2">
         <div class="p-4 grid gap-6">
             <p>
                 Un email contenant un lien pour réinitialiser votre mot de passe vous a été envoyé si un compte est associé à votre adresse email. 
