--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -15,7 +15,7 @@
     
         <p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'messages') }}.</p>
 
-        <p>Pour tout autre soucis, vous pouvez nous contacter par mail :<a href="mailto:"> lorem@ipsum.fr </a> ou téléphone : <a href="tel">+33 1 23 45 67 89</a>.
+        <p>Pour tout autre soucis, vous pouvez nous contacter par mail :<a href="{{ 'mailto:'~ emailRestaurant }}"> {{emailRestaurant}}</a> ou téléphone : <a href="{{ 'tel:+33'~ tel|slice(1)|replace({' ' : ''}) }}">+33 {{ tel|slice(1) }}</a>.
     
         <p>Cordialement,</p>
     
